--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,4 +110,5 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-core:$mockito_version"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
     compileOnly 'com.github.pengrad:jdk9-deps:1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
 }
